# transcendence

./: .gitignore  Makefile  ModelHelper.js  README.md  docker-compose.yml  pong.js  pong2.js  test.html
assets/: Pong.glb  scene(5).gltf
backend/: Dockerfile  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/database/: admin.py  models.py  serializers.py
backend/frontend/: urls.py  views.py
backend/game/: consumers.py  game_class.py  routing.py  urls.py  views.py
backend/login/: urls.py  views.py
backend/main/: serializers.py
backend/tools/: requirements.txt  start.sh
backend/transcendence/: settings.py  urls.py
blend/: donut.mtl  untitled.blend  untitled.blend1
cli/: Cargo.toml  Dockerfile  README.md
cli/src/: fibonnaci.rs  login.rs  main.rs  menu.rs  pong.rs  temperature.rs  tournament.rs  user.rs
frontend/: Dockerfile  app.js  chat.css  chat.js  index.html  style.css  test.html  test2.html
frontend/components/: chat.js  fakeUser.json  game.js  hero.js  login.js  navbar.js  roulette.js  stateManager.js
frontend/srcs/: app.js  index.html  rouletteTool.js  style.css  test.html
frontend/tools/: nginx.conf
localpong/: localpong.js  test.html
old/: ModelHelper.js  pong.js
postgre/tools/: start.sh  test.sh
req/: .env.example
second game/: index.html  rungame.js  styles.css
second game/models/: DrunkRunForward.fbx  Idle.fbx  Run.fbx
testsocket/: index.html  websocket.py
transcendence/: db.sqlite3
transcendence/api/: models.py  urls.py  views.py
transcendence/database/: models.py  serializers.py
(+103 files in other folders)
