[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen="2.0.1"
ncurses = "5.101.0"
openssl-sys = "0.9.101"
pwhash="1.0.0"
rpassword = "7.3.1"
term_size="0.3.2"
tokio = "1.36.0"
tokio-native-tls = "0.3.1"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
websocket = "0.27.0"
