[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen="2.0.1"
ncurses = "5.101.0"
pwhash="1.0.0"
rpassword = "7.3.1"
term_size="0.3.2"
url = "2.5.0"
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls", "cookies"] }
time = "0.3.34"
colored = "2"
tungstenite = "0.21.0"
json = "0.12.4"
